--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   },
-  "devDependencies": {},
   "description": ""
 }
