--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  
   "name": "cachacaria-adm-back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
